# mass-driver-plugins

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yml  mkdocs.yml
activities/: gitlab_example.toml
docs/: activities.md  contributing.md  index.md
docs/drivers/: newlines.md
docs/forges/: gitlab.md
docs/scanners/: dark.md
docs/sources/: gitlab.md
docs/tools/: http.md
src/drivers/: newlines.py
src/forges/: gitlab.py
src/scanners/: dark.py  test.py
src/sources/: gitlab.py
src/tools/: http.py
tests/: test_forges.py  test_sources.py  test_tools.py
