[tool.poetry]
name = "mass-driver-plugins"
version = "0.0.4"
description = "Plugins for mass driver"
authors = ["Ben West <ben.west.500@gmail.com>"]
license = "GNU GPL v3"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
mass-driver = { git = 'https://github.com/w3s7y/mass-driver.git' }
httpx = "^0.28.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.50"
mkdocstrings-python = "^1.13.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.'massdriver.sources']
gitlab-search = 'src.sources.gitlab:GitLabSearch'

[tool.poetry.plugins.'massdriver.drivers']
newlines = 'src.drivers.newlines:NewLineDriver'

[tool.poetry.plugins.'massdriver.forges']
gitlab = 'src.forges.gitlab:GitLab'

[tool.poetry.plugins.'massdriver.scanners']
gitlab = 'src.scanners.dark:ScannerDarkly'
node-pkgs = 'src.scanners.test:get_org_node_pkgs'
